@@ -64,6 +64,7 @@
 	* Killing your Quest leader opens up the stairs to the lower quest
 	  levels (from SporkHack)
 	* Removed the Quest turn limit
+	* Player vampire gets a charisma bonus when wearing an opera cloak (by L)
 
 	* new branch:
 	  - the Dragon Caves (from NetHack Brass R/S)
